implement join to table functionality
